<resources>
    <string name="app_name">shoe_store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="label_login">Login</string>
    <string name="hint_login">username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="cacildis_1_paragraph">"Mussum Ipsum, cacilds vidis litro abertis. Atirei o pau no gatis, per gatis num morreus. Interagi no mé, cursus quis, vehicula ac nisi. Sapien in monti palavris qui num significa nadis i pareci latim. In elementis mé pra quem é amistosis quis leo. "</string>
    <string name="cacildis_2_paragraph">"Suco de cevadiss deixa as pessoas mais interessantis. Interagi no mé, cursus quis, vehicula ac nisi. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.  Leite de capivaris, leite de mula manquis sem cabeça. Diuretics paradis num copo é motivis de denguis. Paisis, filhis, espiritis santis. Delegadis gente finis, bibendum egestas augue arcu ut est. "</string>
    <string name="button_instructions">Instructions</string>
    <string name="text_label_name">Name: </string>
    <string name="text_label_brand">Brand: </string>
    <string name="text_label_size">Size: </string>
    <string name="text_label_description">Description: </string>
    <string name="button_save">SAVE</string>
    <string name="title_logout">Logout</string>
</resources>